@@ -10,9 +10,9 @@
  ******************************************************************************/
 package org.asmeta.simulator.main;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -23,17 +23,17 @@ import org.asmeta.simulator.value.BooleanValue;
 import org.asmeta.simulator.value.IntegerValue;
 import org.asmeta.simulator.value.UndefValue;
 import org.asmeta.simulator.value.Value;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
 import asmeta.definitions.Function;
 
-public class ChooseTest extends BaseTest {
+class ChooseTest extends BaseTest {
 	
 	private static final String TEST_SIMULATOR_CHOOSERULE = "test/simulator/chooserule/";
 
-	@BeforeClass
-	public static void setUpLogger(){
+	@BeforeAll
+	static void setUpLogger(){
 		//AsmParserTest.setUpLogger();
 		//
 //		Logger log = Logger.getLogger("org.asmeta.simulator");
@@ -42,10 +42,9 @@ public class ChooseTest extends BaseTest {
 //		log.setLevel(Level.ALL);
 	}
 	
-	static final String chooseExample = "chooseIntWithGuard.asm"; 
-	
-	@Test
-	public void testNonDetermistic() throws Exception{
+	static final String chooseExample = "chooseIntWithGuard.asm";
+
+	@Test void nonDetermistic() throws Exception{
 		sim = Util.getSimulatorForTestSpec(TEST_SIMULATOR_CHOOSERULE+chooseExample);
 		sim.setShuffleFlag(true);
 		List<Long> integers = new ArrayList<>();
@@ -57,10 +56,9 @@ public class ChooseTest extends BaseTest {
 		}
 		checkRandomValues(integers);
 		integers.stream().forEach(x -> assertTrue(x > 5));
-	} 
-	
-	@Test
-	public void testDetermistic() throws Exception{
+	}
+
+	@Test void determistic() throws Exception{
 		sim = Util.getSimulatorForTestSpec(TEST_SIMULATOR_CHOOSERULE+chooseExample);
 		sim.setShuffleFlag(false);
 		List<Long> integers = new ArrayList<>();
@@ -68,13 +66,14 @@ public class ChooseTest extends BaseTest {
 			UpdateSet updateSet = sim.doOneStep();	
 			Function f = searchFunction("a");
 			Value value = sim.currentState.read(new Location(f, new Value[]{}));
-			integers.add((Long) (value.getValue()));
+			assertTrue(value instanceof IntegerValue);
+			Long e = (Long) (value.getValue());			
+			integers.add(e);
 		}
-		integers.stream().forEach(x -> assertTrue(x == 6));
-	} 
-	
-	@Test
-	public void testRandomIntWithTrue() throws Exception{
+		integers.stream().forEach(x -> assertEquals(6,x));
+	}
+
+	@Test void randomIntWithTrue() throws Exception{
 		sim = Util.getSimulatorForTestSpec(TEST_SIMULATOR_CHOOSERULE + "ChooseRandomInt.asm");
 		List<Long> integers = new ArrayList<>();
 		for(int i = 1; i < 10; i++){
@@ -85,8 +84,8 @@ public class ChooseTest extends BaseTest {
 		}
 		checkRandomValues(integers);
 	}
-	@Test
-	public void testRandomNatWithTrue() throws Exception{
+
+	@Test void randomNatWithTrue() throws Exception{
 		sim = Util.getSimulatorForTestSpec(TEST_SIMULATOR_CHOOSERULE + "ChooseRandomNat.asm");
 		List<Long> integers = new ArrayList<>();
 		for(int i = 1; i < 10; i++){
@@ -98,8 +97,8 @@ public class ChooseTest extends BaseTest {
 		checkRandomValues(integers);
 		integers.stream().forEach(x -> assertTrue(x >= 0));
 	}
-	@Test
-	public void testRandomRealWithTrue() throws Exception{
+
+	@Test void randomRealWithTrue() throws Exception{
 		sim = Util.getSimulatorForTestSpec(TEST_SIMULATOR_CHOOSERULE + "ChooseRandomReal.asm");
 		List<Double> integers = new ArrayList<>();
 		for(int i = 1; i < 10; i++){
@@ -113,11 +112,10 @@ public class ChooseTest extends BaseTest {
 
 	private <T> void checkRandomValues(List<T> values) {
 		//there are not two pairs of equals number (itis vwery unlikely) 
-		assertTrue(values.get(0) != values.get(1) || values.get(2) != values.get(3));
-	} 
-	
-	@Test
-	public void testIntWithCond() throws Exception{
+		assertTrue(values.getFirst() != values.get(1) || values.get(2) != values.get(3));
+	}
+
+	@Test void intWithCond() throws Exception{
 		Simulator sim = Util.getSimulatorForTestSpec(TEST_SIMULATOR_CHOOSERULE + "ChooseOverInteger.asm");
 		try{
 			UpdateSet updateSet = sim.doOneStep();	
@@ -125,22 +123,22 @@ public class ChooseTest extends BaseTest {
 			assertTrue(re.getMessage().contains("Infinite"));
 		}
 	}
-	@Test
-	public void testChooseBoolean() throws Exception {
+
+	@Test void chooseBoolean() throws Exception {
 		sim = Util.getSimulatorForTestSpec(TEST_SIMULATOR_CHOOSERULE + "chooseBoolean.asm");
 		sim.setShuffleFlag(true);
 		sim.run(1000);//la probabilita' che il test fallisca (anche se il simulatore e' corretto) e' 1/(2^1000)
 		Function f = searchFunction("fooA");
 		Value value = sim.currentState.read(new Location(f, new Value[]{}));
 		//System.out.println("fooA = " + value.toString());
-		assertFalse(value.toString().equals("0"));
+		assertNotEquals("0", value.toString());
 		f = searchFunction("fooB");
 		value = sim.currentState.read(new Location(f, new Value[]{}));
 		//System.out.println("fooB = " + value.toString());
-		assertFalse(value.toString().equals("0"));
+		assertNotEquals("0", value.toString());
 	}
-	@Test
-	public void test34() throws Exception {
+
+	@Test void test34() throws Exception {
 		sim = Util.getSimulatorForTestSpec(TEST_SIMULATOR_CHOOSERULE + "ChooseInConcrete.asm");
 		sim.setShuffleFlag(false);
 		sim.run(1);		
@@ -149,8 +147,7 @@ public class ChooseTest extends BaseTest {
 		assertEquals(new IntegerValue(1), v);
 	}
 
-	@Test
-	public void test35() throws Exception {
+	@Test void test35() throws Exception {
 		sim = Util.getSimulatorForTestSpec(TEST_SIMULATOR_CHOOSERULE +"ChooseRule01.asm");
 		sim.run(1);		
 		Function f = searchFunction("f");
@@ -158,8 +155,7 @@ public class ChooseTest extends BaseTest {
 		assertEquals(new IntegerValue(20), v);
 	}
 
-	@Test
-	public void test36() throws Exception {
+	@Test void test36() throws Exception {
 		sim = Util.getSimulatorForTestSpec(TEST_SIMULATOR_CHOOSERULE + "ChooseRule02.asm");
 		sim.run(1);		
 		Function f = searchFunction("f");
@@ -168,32 +164,31 @@ public class ChooseTest extends BaseTest {
 		assertEquals(BooleanValue.TRUE, v);
 	}
 
-	@Test
-	public void test37() throws Exception {
+	@Test void test37() throws Exception {
 		sim = Util.getSimulatorForTestSpec(TEST_SIMULATOR_CHOOSERULE + "ChooseRule03.asm");
 		sim.run(1);		
 		Function f = searchFunction("f");
 		Value<?> v = sim.currentState.read(new Location(f, new Value[0]));
 		assertEquals(UndefValue.UNDEF, v);
 	}
-	@Test
-	public void testCondFalseIfNone() throws Exception {
+
+	@Test void condFalseIfNone() throws Exception {
 		sim = Util.getSimulatorForTestSpec(TEST_SIMULATOR_CHOOSERULE + "ChooseRule03IfNone.asm");
 		sim.run(1);		
 		Function f = searchFunction("f");
 		Value<?> v = sim.currentState.read(new Location(f, new Value[0]));
 		assertEquals(new IntegerValue(0), v);
 	}
-	@Test
-	public void testCondFalseIfNoneFALSE() throws Exception {
+
+	@Test void condFalseIfNoneFALSE() throws Exception {
 		sim = Util.getSimulatorForTestSpec(TEST_SIMULATOR_CHOOSERULE + "ChooseRule03IfNone2.asm");
 		sim.run(1);		
 		Function f = searchFunction("f");
 		Value<?> v = sim.currentState.read(new Location(f, new Value[0]));
 		assertEquals(new IntegerValue(0), v);
 	}
-	@Test
-	public void testAD() throws Exception {
+
+	@Test void ad() throws Exception {
 		sim = Util.getSimulatorForTestSpec(TEST_SIMULATOR_CHOOSERULE + "ChooseRuleAD.asm");
 		sim.run(1);		
 		Function f = searchFunction("a");
